[package]
name = "rmap"
version = "0.1.0"
edition = "2021"
description = "R-Map: A modern, memory-safe network mapper written in Rust"
authors = ["R-Map Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ununp3ntium115/nmap"
keywords = ["network", "scanner", "security", "nmap", "rust"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = "2.9"
dns-lookup = "2.0"