[package]
name = "rmap"
version = "0.2.0"
edition = "2021"
description = "R-Map: A modern, memory-safe network mapper written in Rust"
authors = ["R-Map Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ununp3ntium115/nmap"
keywords = ["network", "scanner", "security", "nmap", "rust"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = "2.9"
dns-lookup = "2.0"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ipnet = "2.9"
tokio = { version = "1.0", features = ["full", "test-util"] }

[[bench]]
name = "performance_benchmarks"
harness = false